show, edit and delete functional

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,6 +4,6 @@
      <p>Category(tag): <%= transaction.tag.tag %></p>
      <p>Amount: <%= transaction.price %></p>
      <p>Date: <%= transaction.transaction_date %></p>
-     <p><a class="btn" href="/transaction/<%= transaction.id %>"> Edit Transaction</a></p>
+     <p><a class="btn" href="/transaction/<%= transaction.id %>"> Show Transaction</a></p>
    </div>
 <% end %>
