--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,9 +6,8 @@
   </head>
   <body>
     <div class="introduction">
-        <h1>Welcome back, Calum</h1>
-        <h3>please select from the options below to view or edit your
-           transaction history</h3>
+        <h1>MoneyCashboard</h1>
+           <a class="button" href="/transaction/new">New Transaction</a>
       </div>
     <%= yield %>
   </body>
