crud working, set out correctly, moving onto wallet

--- a/views/edit.erb
+++ b/views/edit.erb
@@ -1,12 +1,12 @@
-<form method="post" action="/transaction/<%= @transaction.id %>">
+<form method="post" action="/transaction/<%= @transactions.id %>">
   <input type="hidden" name="_method" value="put">
 
   <div class="field-group">
     <label for="merchant-field" class="label">Merchant:</label>
     <div class="field">
-      <select name="merchant" id="merchant-slection">
-        <% @merchant.each do |merchant| %>
-          <option value=<%= merchant.id %>><%=merchant.merchant%></option>
+      <select name="merchant_id" id="merchant-selection">
+        <% @merchants.each do |merchant| %>
+          <option value=<%= merchant.id %>><%=merchant.merchant_name%></option>
         <% end %>
       </select>
     </div>
@@ -15,9 +15,9 @@
   <div class="field-group">
     <label for="tag-selection" class="label">Category(tag):</label>
     <div class="field">
-      <select name="tag" id="tag-slection">
-        <% @tag.each do |tag| %>
-          <option value=<%= tag.id %>><%=tag.tag%></option>
+      <select name="tag_id" id="tag-selection">
+        <% @tags.each do |tag| %>
+          <option value=<%= tag.id %>><%=tag.tag_name%></option>
         <% end %>
       </select>
     </div>
@@ -30,19 +30,19 @@
       type="text"
       name="price"
       id="last-name-field"
-      value="<%= @transaction.price %>"
+      value="<%= @transactions.price %>"
       />
     </div>
   </div>
 
   <div class="field-group">
-    <label for="age-field">Date:</label>
+    <label for="date-field">Date:</label>
     <div class="field">
       <input
-      type="number"
-      name="date"
-      id="age-field"
-      value="<%= @transaction.transaction_date() %>"
+      type="date"
+      name="transaction_date"
+      id="date-field"
+      value="<%= @transactions.transaction_date() %>"
       />
     </div>
   </div>
