--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,8 +6,7 @@
   </head>
   <body>
     <div class="introduction">
-        <h1>MoneyCashboard</h1>
-           <a class="button" href="/transaction/new">New Transaction</a>
+        <h1>Money Cashboard</h1>
       </div>
     <%= yield %>
   </body>
