--- a/views/index.erb
+++ b/views/index.erb
@@ -18,10 +18,10 @@
   </tr>
 </table>
 <h4> Search by Category(tag):</h4>
-<button><a class="button" >Food</a></button>
-<button><a class="button" >Drink</a></button>
-<button><a class="button" >Hardware</a></button>
-<button><a class="button" >Clothing</a></button>
+<button><a class="button" href="/transaction/by_tag/1">Food</a></button>
+<button><a class="button" href="/transaction/by_tag/3">Drink</a></button>
+<button><a class="button" href="/transaction/by_tag/2">Hardware</a></button>
+<button><a class="button" href="/transaction/by_tag/4">Clothing</a></button>
 
 <h4> To enter a new transaction, click below:</h4>
 <button><a class="button" href="/transaction/new">New Transaction</a></button>
