--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,11 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>MoneyCashboard</title>
+    <link rel = "stylesheet" type = "text/css" href = "/styles/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster">
+    <title>Money In The Bank</title>
+
   </head>
   <body>
     <div class="introduction">
-        <h1>Money Cashboard</h1>
+        <h1>Money In The Bank</h1>
       </div>
     <%= yield %>
   </body>
