--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -18,6 +18,11 @@ h1{
   text-shadow: 3px 2px pink;
   text-align: center;
 }
+
+h4{
+  text-align: center;
+}
+
 .button {
     background-color: #ffffff;
     border: none;
@@ -30,9 +35,16 @@ h1{
     margin: 4px 2px;
     cursor: pointer;
   }
+
+.button-centre{
+  display: flex;
+  justify-content: center;
+}
+
 table {
     border-collapse: collapse;
     width: 100%;
+    margin: auto;
   }
 
 th, td {
@@ -41,4 +53,11 @@ th, td {
     border-bottom: 1px solid black;
   }
 
-tr:hover {background-color:#f5f5f5;}
+th {
+    background-color: #e0e2e0;
+    color: black;
+  }
+
+tr:hover {
+  transition: all 0.3s ease;
+  background-color:#fcfcfc;}
