--- a/views/index.erb
+++ b/views/index.erb
@@ -30,6 +30,6 @@
 <button><a class="button" href="/transaction/new">New Transaction</a></button>
 </div>
 
-
 <!-- enter budget stuff here -->
 <h4> Your total spending is: £<%= Transaction.total_spend %></h4>
+<h4> Your remaining budget is: £<%= Transaction.budget %></h4>
