--- a/views/home.erb
+++ b/views/home.erb
@@ -1,2 +1,4 @@
-<h3> Welcome back User, to continue to transactions, click below</h3>
+<h4> Welcome back User, to continue to transactions, click below</h4>
+<div class="button-centre">
 <button><a class="button" href="/transaction">Proceed</a></button>
+</div>
