selected wokring from drop down menu

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -39,7 +39,12 @@ h4{
 .button-centre{
   display: flex;
   justify-content: center;
-}
+  }
+
+.p-show{
+  display: flex;
+  justify-content: center;
+  }
 
 table {
     border-collapse: collapse;
