--- a/views/edit.erb
+++ b/views/edit.erb
@@ -1,24 +1,23 @@
-<form method="post" action="/transaction/<%= @transactions.id %>">
+<form method="post" action="/transaction/<%= @transaction.id %>">
   <input type="hidden" name="_method" value="put">
 
   <div class="field-group">
-    <label for="merchant-field" class="label">Merchant:</label>
+    <label for="merchant-field">Merchant:</label>
     <div class="field">
       <select name="merchant_id" id="merchant-selection">
         <% @merchants.each do |merchant| %>
-          <option value=<%= merchant.id %><%= "selected" if @transactions.merchant_id == merchant.id %>><%=merchant.merchant_name%></option>
+          <option value=<%= merchant.id %> <%= "selected" if @transaction.merchant_id == merchant.id %>><%=merchant.merchant_name%></option>
         <% end %>
       </select>
     </div>
   </div>
 
   <div class="field-group">
-    <label for="tag-selection" class="label">Category(tag):</label>
+    <label for="tag-selection">Category(tag):</label>
     <div class="field">
       <select name="tag_id" id="tag-selection">
         <% @tags.each do |tag| %>
-          <option value=<%= tag.id %><%= "selected" if @transactions.tag_id == tag.id
-           %>><%=tag.tag_name%></option>
+          <option value=<%= tag.id %> <%= "selected" if @transaction.tag_id == tag.id %>><%=tag.tag_name%></option>
         <% end %>
       </select>
     </div>
@@ -31,7 +30,7 @@
       type="text"
       name="price"
       id="last-name-field"
-      value="<%= @transactions.price %>"
+      value="<%= @transaction.price %>"
       />
     </div>
   </div>
@@ -43,7 +42,7 @@
       type="date"
       name="transaction_date"
       id="date-field"
-      value="<%= @transactions.transaction_date() %>"
+      value="<%= @transaction.transaction_date() %>"
       />
     </div>
   </div>
