--- a/views/index.erb
+++ b/views/index.erb
@@ -27,7 +27,9 @@
 
 <h4> To enter a new transaction, click below:</h4>
 <div class="button-centre">
+  <button><a class="button" href="/transaction/new_merchant">New Merchant</a></button>
 <button><a class="button" href="/transaction/new">New Transaction</a></button>
+<button><a class="button" href="/tags/new">New Tag</a></button>
 </div>
 
 <h4> Your total spending is: £<%= Transaction.total_spend %></h4>
