--- a/views/index.erb
+++ b/views/index.erb
@@ -17,17 +17,15 @@
     <% end %>
   </tr>
 </table>
-<h4> Search by Category(tag):</h4>
+<h4> Search by:</h4>
 <div class="button-centre">
-<button><a class="button" href="/transaction/by_tag/3">Food</a></button>
-<button><a class="button" href="/transaction/by_tag/4">Drink</a></button>
-<button><a class="button" href="/transaction/by_tag/2">Hardware</a></button>
-<button><a class="button" href="/transaction/by_tag/1">Clothing</a></button>
+<button><a class="button" href="/merchants">Merchant</a></button>
+<button><a class="button" href="/tags">Category(tag)</a></button>
 </div>
 
 <h4> To enter a new transaction, click below:</h4>
 <div class="button-centre">
-  <button><a class="button" href="/transaction/new_merchant">New Merchant</a></button>
+  <button><a class="button" href="/merchants/new">New Merchant</a></button>
 <button><a class="button" href="/transaction/new">New Transaction</a></button>
 <button><a class="button" href="/tags/new">New Tag</a></button>
 </div>
