--- a/views/new_tag.erb
+++ b/views/new_tag.erb
@@ -1,7 +1,7 @@
 <form method="post" action="/tags">
 
   <div class="field-group">
-    <label for="tag_name">New tag:</label>
+    <label for="tag_name">New Tag:</label>
     <div class="field">
       <input
       type="text"
