category buttons working

--- a/views/home.erb
+++ b/views/home.erb
@@ -1,4 +1,4 @@
 <h4> Welcome back User, to continue to transactions, click below</h4>
 <div class="button-centre">
-<button><a class="button" href="/transaction">Proceed</a></button>
+<button><a class="button" href="/transactions">Proceed</a></button>
 </div>
