--- a/views/tag/by_tag.erb
+++ b/views/tag/by_tag.erb
@@ -13,7 +13,7 @@
     <td><%= transaction.tag.tag_name %></td>
     <td><%= transaction.price %></td>
     <td><%= transaction.transaction_date %></td>
-    <td><button><a class="button" href="/transaction/<%= transaction.id %>"> Edit</a></button></td>
+    <td><button><a class="button" href="/transactions/<%= transaction.id %>"> Edit</a></button></td>
     <% end %>
   </tr>
 </table>
