--- a/views/tag/tags.erb
+++ b/views/tag/tags.erb
@@ -2,7 +2,7 @@
 
 <% for tag in @tags %>
 <div class="button-centre">
-<form action="//by_tag/<%= tag.id %>" method="GET">
+<form action="/transactions/by_tag/<%= tag.id %>" method="GET">
 <button><%= tag.tag_name %></button>
 </form>
 </div>
