--- a/views/transaction/edit.erb
+++ b/views/transaction/edit.erb
@@ -1,4 +1,4 @@
-<form method="post" action="/transaction/<%= @transaction.id %>">
+<form method="post" action="/transactions/<%= @transaction.id %>">
   <input type="hidden" name="_method" value="put">
 
   <div class="field-group">
