--- a/views/transaction/new.erb
+++ b/views/transaction/new.erb
@@ -1,4 +1,4 @@
-<form method="post" action="/transaction">
+<form method="post" action="/transactions">
 
   <div class="field-group">
     <label for="merchant-selection" class="label">Merchant:</label>
