--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -19,6 +19,10 @@ h1{
   text-align: center;
 }
 
+h2{
+  text-align: center;
+}
+
 h4{
   text-align: center;
 }
@@ -51,10 +55,18 @@ h4{
     }
 
 #table-scroll {
-    height:400px;
+    height:390px;
     overflow:auto;
     margin-top:20px;
     }
+
+#table-wrapper thead .text {
+    position:absolute;
+    top:-20px;
+    z-index:2;
+    height:20px;
+
+  }
 
 
 
@@ -70,11 +82,9 @@ th, td {
     border-bottom: 1px solid black;
   }
 
-th {
-    background-color: #e0e2e0;
-    color: black;
-  }
+
 
 tr:hover {
   transition: all 0.3s ease;
-  background-color:#fcfcfc;}
+  background-color:#fcfcfc;
+}
