all buttons now uniform, no errors detected

--- a/views/merchant/merchants.erb
+++ b/views/merchant/merchants.erb
@@ -3,7 +3,7 @@
 <% for merchant in @merchants %>
 <div class="button-centre">
 <form action="/transactions/by_merchant/<%= merchant.id %>" method="GET">
-<button><%= merchant.merchant_name %></button>
+<button><a class="button"> <%= merchant.merchant_name %></a></button>
 </form>
 </div>
 <% end %>
