--- a/views/merchant/new_merchant.erb
+++ b/views/merchant/new_merchant.erb
@@ -11,5 +11,7 @@
       required
       />
     </div>
-    <button class="button">Confirm New Merchant</button>
+    <div class="button-centre">
+    <button><a class="button">Confirm New Merchant</a></button>
+  </div>
   </form>
