--- a/views/transaction/new.erb
+++ b/views/transaction/new.erb
@@ -43,6 +43,7 @@
       />
     </div>
   </div>
-
-  <button class="button">Confirm Transaction</button>
+  <div class="button-centre">
+    <button><a class="button">Confirm Transaction</a></button>
+  </div>
 </form>
