--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -21,10 +21,12 @@ h1{
 
 h2{
   text-align: center;
+  font-size: 18px;
 }
 
 h4{
   text-align: center;
+  font-size: 20px;
 }
 
 .button {
@@ -43,11 +45,11 @@ h4{
 .button-centre{
   display: flex;
   justify-content: center;
-  }
+}
 
 .p-show{
-  display: flex;
-  justify-content: center;
+  text-align: center;
+  font-size: 20px;
   }
 
 #table-wrapper {
@@ -55,7 +57,7 @@ h4{
     }
 
 #table-scroll {
-    height:390px;
+    height:270px;
     overflow:auto;
     margin-top:20px;
     }
@@ -80,6 +82,7 @@ th, td {
     padding: 8px;
     text-align: left;
     border-bottom: 1px solid black;
+    font-size: 18px;
   }
 
 
@@ -87,4 +90,8 @@ th, td {
 tr:hover {
   transition: all 0.3s ease;
   background-color:#fcfcfc;
+}
+
+.field-group{
+  text-align: center;
 }
