--- a/views/tag/new_tag.erb
+++ b/views/tag/new_tag.erb
@@ -1,7 +1,7 @@
 <form method="post" action="/tags">
 
   <div class="field-group">
-    <label for="tag_name">New Tag:</label>
+    <label for="tag_name">New Category(tag):</label>
     <div class="field">
       <input
       type="text"
@@ -11,5 +11,7 @@
       required
       />
     </div>
-    <button class="button">Confirm New Tag</button>
+    <div class="button-centre">
+    <button><a class="button">Confirm New Category(tag)</a></button>
+  </div>
   </form>
