--- a/views/transaction/index.erb
+++ b/views/transaction/index.erb
@@ -1,3 +1,5 @@
+<h2> Your total spending is: £<%= Transaction.total_spend %></h2>
+<h2> Your remaining budget is: £<%= Transaction.budget %></h2>
 <h4> All Transactions:</h4>
 <p>    </p>
 <p></p>
@@ -36,8 +38,5 @@
 <div class="button-centre">
   <button><a class="button" href="/merchants/new">New Merchant</a></button>
 <button><a class="button" href="/transactions/new">New Transaction</a></button>
-<button><a class="button" href="/tags/new">New Tag</a></button>
+<button><a class="button" href="/tags/new">New Category(tag)</a></button>
 </div>
-
-<h2> Your total spending is: £<%= Transaction.total_spend %></h2>
-<h2> Your remaining budget is: £<%= Transaction.budget %></h2>
